--- a/_posts/0000-01-02-TFong1.md
+++ b/_posts/0000-01-02-TFong1.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-Your text
+The lazy dog jumps over the foxing fox.
 Use the left arrow to go back!
